Image manipulations linked to ui

--- a/src/components/css/NumberInput.css
+++ b/src/components/css/NumberInput.css
@@ -12,4 +12,10 @@
 
 .NumberInput .value-display {
     width: 150px;
+    display: grid;
+    place-items: center;
+    flex-grow: 1;
+    text-align: center;
+    border: 0;
+    padding: 0;
 }
