--- a/src/components/css/Viewport.css
+++ b/src/components/css/Viewport.css
@@ -1,4 +1,20 @@
 .Viewport {
     width: 100%;
     height: 100%;
+    position: relative;
+}
+
+.Viewport .mode-buttons {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #666;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    z-index: 100;
+}
+
+.Viewport .mode-button {
+    margin: 5px;
 }
