--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 
 .ui {
   width: 400px;
+  min-width: 400px;
+  max-width: 400px;
   padding: 10px;
   background-color: #daf;
   display: flex;
@@ -25,9 +27,26 @@
 .button {
   background-color: #a0f;
   color: white;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 16px;
   padding: 5px;
   border: 0;
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: #c6f;
+}
+
+.button:active {
+  background-color: #eaf;
+}
+
+.button:disabled,
+.button.disabled {
+  color: #666;
+  background-color: #ccc;
+  cursor: not-allowed;
 }
