--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,17 @@
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+.top-left {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 100;
+}
+
+.top-right {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 100;
+}
