--- a/src/App.css
+++ b/src/App.css
@@ -30,18 +30,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
-  padding: 5px;
+  font-size: 1.2em;
+  padding: 5px 8px;
   border: 0;
   cursor: pointer;
+  border-radius: 3px;
+}
+
+.button-secondary {
+  background-color: white;
+  color: #a0f;
+  border: 1px solid #a0f;
 }
 
 .button:hover {
   background-color: #c6f;
+  color: white;
 }
 
 .button:active {
   background-color: #eaf;
+  color: white;
 }
 
 .button:disabled,
