--- a/src/components/css/InputImageBrowser.css
+++ b/src/components/css/InputImageBrowser.css
@@ -1,7 +1,7 @@
 .InputImageBrowser {
     display: flex;
     flex-direction: row;
-    /* grid-column: 1 / 3; */
+    font-size: 1.3em;
 }
 
 .InputImageBrowser input[type=file] {
