--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,10 @@
   min-width: 400px;
   max-width: 400px;
   padding: 10px;
-  background-color: #daf;
+  background-color: #333;
   display: flex;
   flex-direction: column;
+  color: white;
 }
 
 .ui > * {
@@ -20,7 +21,7 @@
 
 .viewport-container {
   flex: 1 1 auto;
-  background-color: #333;
+  background-color: #222;
   color: white;
 }
 
@@ -38,9 +39,9 @@
 }
 
 .button-secondary {
-  background-color: white;
-  color: #a0f;
-  border: 1px solid #a0f;
+  color: white;
+  background-color: #666;
+  /* border: 1px solid #a0f; */
 }
 
 .button:hover {
@@ -56,7 +57,7 @@
 .button:disabled,
 .button.disabled {
   color: #666;
-  background-color: #ccc;
+  background-color: #999;
   cursor: not-allowed;
 }
 
