--- a/src/components/css/NumberInput.css
+++ b/src/components/css/NumberInput.css
@@ -25,7 +25,7 @@
     padding: 0;
     cursor: pointer;
     font-size: 1.2em;
-    background-color: #a0f;
+    background-color: #666;
     color: white;
     margin: 0 1px;
     border-radius: 3px;
