--- a/src/components/css/NumberInput.css
+++ b/src/components/css/NumberInput.css
@@ -4,6 +4,10 @@
     justify-content: space-between;
     font-weight: bold;
     margin-top: 10px;
+    border: 1px solid #222;
+    border-radius: 5px;
+    padding: 1px;
+    background-color: #222;
 }
 
 .NumberInput .label {
